--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.djrapitops</groupId>
-    <artifactId>Extension-template</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>Extension-EssentialsX</artifactId>
+    <version>2.15.0-R0.1</version>
     <build>
         <plugins>
             <plugin>
@@ -28,10 +28,10 @@
 
         <!-- Platforms -->
 
-        <!--<repository>-->
-        <!--<id>spigot-repo</id>-->
-        <!--<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>-->
-        <!--</repository>-->
+        <repository>
+            <id>spigot-repo</id>
+            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
+        </repository>
         <!--<repository>-->
         <!--<id>sponge-repo</id>-->
         <!--<url>https://repo.spongepowered.org/maven</url>-->
@@ -54,22 +54,21 @@
             <scope>provided</scope>
         </dependency>
 
-        <!-- Plugin API Dependency -->
-        <!--<dependency>-->
-        <!--<groupId></groupId>-->
-        <!--<artifactId></artifactId>-->
-        <!--<version></version>-->
-        <!--<scope>provided</scope>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>net.ess3</groupId>
+            <artifactId>EssentialsX</artifactId>
+            <version>2.15.0.1</version>
+            <scope>provided</scope>
+        </dependency>
 
         <!-- Platforms -->
 
-        <!--<dependency>-->
-        <!--<groupId>org.spigotmc</groupId>-->
-        <!--<artifactId>spigot-api</artifactId>-->
-        <!--<version>1.12.2-R0.1-SNAPSHOT</version>-->
-        <!--<scope>provided</scope>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>org.spigotmc</groupId>
+            <artifactId>spigot-api</artifactId>
+            <version>1.12.2-R0.1-SNAPSHOT</version>
+            <scope>provided</scope>
+        </dependency>
         <!--<dependency>-->
         <!--<groupId>org.spongepowered</groupId>-->
         <!--<artifactId>spongeapi</artifactId>-->
@@ -109,12 +108,11 @@
         </dependency>
     </dependencies>
 
-    <!-- TODO add name of the extension to the url-->
-    <!--<distributionManagement>-->
-    <!--<repository>-->
-    <!--<id>bintray-rsl1122-Plan-repository</id>-->
-    <!--<name>rsl1122-Plan-repository</name>-->
-    <!--<url>https://api.bintray.com/maven/rsl1122/Plan-repository/<name>/;publish=1</url>-->
-    <!--</repository>-->
-    <!--</distributionManagement>-->
+    <distributionManagement>
+        <repository>
+            <id>bintray-rsl1122-Plan-repository</id>
+            <name>rsl1122-Plan-repository</name>
+            <url>https://api.bintray.com/maven/rsl1122/Plan-repository/Extension-EssentialsX/;publish=1</url>
+        </repository>
+    </distributionManagement>
 </project>
