--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,11 @@
             <url>https://dl.bintray.com/rsl1122/Plan-repository/</url>
         </repository>
 
+        <repository>
+            <id>enderzone-repo</id>
+            <url>https://ci.ender.zone/plugin/repository/everything/</url>
+        </repository>
+
         <!-- Platforms -->
 
         <repository>
@@ -50,14 +55,14 @@
         <dependency> <!-- Plan API -->
             <groupId>com.djrapitops</groupId>
             <artifactId>Plan-api</artifactId>
-            <version>0.0.3</version>
+            <version>5.0-R0.3</version>
             <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>net.ess3</groupId>
             <artifactId>EssentialsX</artifactId>
-            <version>2.15.0.1</version>
+            <version>2.17.0</version>
             <scope>provided</scope>
         </dependency>
 
